--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
       import { send } from "./js/client.mjs";
       window.send = send;
 
+      import { join } from "./js/funcs.mjs";
+      window.join = join;
+
       import { o } from "./js/setup.mjs";
       window.o = o;
     </script>
